Change build script to use test4.py and add icon

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build app
       run: |
-        pyinstaller --onefile --windowed main.py
+        pyinstaller --onefile --windowed --ico=ico64.ico test4.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
